unpackaged/main/default/objects/DocketAlarm_Search__c/DocketAlarm_Search__c.object-meta.xml
<CustomObject>
    <label>DocketAlarm Search</label>
    <nameField>
        <displayFormat>DAS-{000000}</displayFormat>
        <label>DocketAlarm Search Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocketAlarm Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>