unpackaged/main/default/objects/DocketAlarm_Search__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DocketAlarm Searches</relationshipLabel>
    <relationshipName>DocketAlarm_Searches</relationshipName>
    <type>Lookup</type>
</CustomField>