unpackaged/main/default/objects/DocketAlarm_Search__c/fields/Business_Guarantor_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Guarantor_Name__c</fullName>
    <label>Business/Guarantor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>