unpackaged/main/default/objects/DocketAlarm_Search__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of search key (ie: Federal Tax ID / PG1 SSN/PG2 SSN).</description>
    <inlineHelpText>Description of search key</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>