unpackaged/main/default/objects/DocketAlarm_Search__c/fields/Search_Key__c.field-meta.xml
<CustomField>
    <fullName>Search_Key__c</fullName>
    <label>Search Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>